deploy/cms-app-api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    namespace: systems-dev-ns
    name: cms-app-api-ingress
    annotations:
        kubernetes.io/ingress.class: alb
        alb.ingress.kubernetes.io/scheme: internet-facing
        alb.ingress.kubernetes.io/target-type: instance
        alb.ingress.kubernetes.io/security-groups: sg-0cbc30ceb65f60a41
        alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
        alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:807380035085:certificate/55607f4a-2647-4587-9de4-591de24f772b
        alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-2016-08
spec:
    rules:
        - http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: cms-app-api-nlb
                            port:
                                number: 80
